# -

backend/: .env  Cargo.toml  schema.sql
backend/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  ws.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AppHeader.tsx
frontend/src/pages/: Chat.tsx  Evaluation.tsx  Login.tsx  Management.tsx  NewTask.tsx  Profile.tsx  Progress.tsx  Register.tsx  TaskDashboard.tsx  TaskDetail.tsx  Tasks.tsx
