[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-multipart = "0.6"
actix-cors = "0.7"
actix-web-actors = "4"
actix-files = "0.6"
sqlx = { version = "0.7", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
sanitize-filename = "0.5"
